--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "strict": true,
         "skipLibCheck": true,
 
-        "module": "ES2022",
+        "module": "esnext",
         "moduleResolution": "bundler",
         "allowArbitraryExtensions": true,
 
